--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -18,7 +18,7 @@
 }
 
 .title {
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 }
 
 .cta {
@@ -37,7 +37,7 @@
   color: var(--bg-color);
   height: 5rem;
   width: 100%;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
   display: flex;
   justify-content: flex-end;
 
@@ -63,7 +63,7 @@
   text-align: right;
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
   }
 }
 
@@ -98,7 +98,7 @@
 }
 
 .starts {
-  font-size: @fontSizeXXXL;
+  font-size: @DesktopFontSizeXL;
   position: absolute;
   width: 100%;
   bottom: -0.3rem;
@@ -113,18 +113,18 @@
   position: absolute;
   bottom: 0;
   height: 5rem;
-  font-size: @fontSizeXXXL;
+  font-size: @DesktopFontSizeXL;
   color: var(--text-on-secondary-color);
   display: flex;
   transition: width 1s ease;
   z-index: 3;
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeXXL;
+    font-size: @DesktopFontSizeXL;
   }
 
   @media (max-width: 360px) {
-    font-size: @fontSizeXL;
+    font-size: @DesktopFontSizeXL;
   }
 
   &::before {
@@ -179,13 +179,13 @@
   margin-left: 1rem;
 
   @media (max-width: 1350px) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
     height: 10rem;
     width: 10rem;
   }
 
   @media (max-width: 1270px) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
     height: 10rem;
     width: 10rem;
     top: 6rem;
@@ -233,7 +233,7 @@
   }
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeXS;
+    font-size: @DesktopFontSizeXS;
   }
 }
 
@@ -259,7 +259,7 @@
 .hint {
   margin-bottom: 1rem;
   font-weight: normal;
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
 
   @media (max-width: @breakPointM) {
     .sectionInnerHasEyeCatcher & {
