--- a/src/components/EmailListForm/style.module.less
+++ b/src/components/EmailListForm/style.module.less
@@ -62,7 +62,7 @@
     color: var(--font-color) !important;
     font-family: inherit;
     font-weight: normal;
-    font-size: @fontSizeM;
+    font-size: @DesktopFontSizeM;
     line-height: inherit;
   }
 
@@ -76,7 +76,7 @@
       .ml-form-embedBody
       .ml-form-embedContent
       h4) {
-    font-size: @fontSizeL;
+    font-size: @DesktopFontSizeL;
   }
 
   :global(#mlb2-1447292.ml-form-embedContainer) {
