--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -23,11 +23,11 @@
   }
 
   div {
-    font-size: @fontSizeM;
+    font-size: @DesktopFontSizeM;
     margin-bottom: 0; // Overwrites unneeded field container margins
 
     @media (max-width: @breakPointM) {
-      font-size: @fontSizeS;
+      font-size: @DesktopFontSizeS;
     }
   }
 
@@ -37,7 +37,7 @@
 
   // Error message
   label div {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
     font-weight: bold;
   }
 }
@@ -58,7 +58,7 @@
 }
 
 .secondaryLink {
-  font-size: @fontSizeXS;
+  font-size: @DesktopFontSizeXS;
   margin: 1.5rem 0.5rem;
 }
 
@@ -75,7 +75,7 @@
 }
 
 .currency {
-  font-size: @fontSizeXL;
+  font-size: @DesktopFontSizeXL;
   margin-top: 16px;
 }
 
@@ -84,7 +84,7 @@
 }
 
 .hint {
-  font-size: @fontSizeXS;
+  font-size: @DesktopFontSizeXS;
 }
 
 .christmasTheme {
