--- a/src/components/Forms/ImageUpload/style.module.less
+++ b/src/components/Forms/ImageUpload/style.module.less
@@ -49,14 +49,14 @@
   pointer-events: all;
   top: 8.5rem;
   left: 1rem;
-  font-size: @fontSizeXS;
+  font-size: @DesktopFontSizeXS;
 
   @media (max-width: @breakPointM) {
     transform: rotate(10deg);
     transform-origin: 0 0;
     top: 8rem;
     left: 2rem;
-    font-size: @fontSizeXS;
+    font-size: @DesktopFontSizeXS;
   }
 
   &:hover {
