--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -11,7 +11,7 @@
 .countField,
 .listIdField {
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
     width: 100%;
   }
 }
@@ -41,7 +41,7 @@
 
 .label {
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeXS;
+    font-size: @DesktopFontSizeXS;
     hyphens: auto;
   }
 }
@@ -68,7 +68,7 @@
 
 .headingSelfScan {
   margin: 0 0 1rem;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 }
 
 .campaignVisualisations {
