--- a/src/components/Forms/SignatureListDownload/style.module.less
+++ b/src/components/Forms/SignatureListDownload/style.module.less
@@ -10,20 +10,20 @@
 }
 
 .form {
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   position: relative;
 }
 
 .hint {
   margin-top: 0;
   margin-bottom: 3rem;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 }
 
 .iconParagraph {
   display: flex;
   align-items: center;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 
   @media (max-width: @breakPointS) {
     flex-wrap: wrap;
