--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -13,7 +13,7 @@
   line-height: inherit;
   max-width: 100%;
   width: @inputWidth;
-  font-size: @fontSizeL;
+  font-size: @DesktopFontSizeL;
 
   @media (max-width: @breakPointS) {
     width: 100%;
@@ -30,15 +30,15 @@
 }
 
 .textInputSmall {
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
 }
 
 .textInputInline {
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
 }
 
 .textarea {
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   resize: vertical;
   min-height: 6rem;
 }
