--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -54,14 +54,14 @@
 }
 
 .nav {
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 
   @media (max-width: 1050px) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
   }
 
   @media (max-width: 860px) {
-    font-size: @fontSizeXS;
+    font-size: @DesktopFontSizeXS;
   }
 }
 
@@ -120,7 +120,7 @@
   }
 
   @media (max-width: @breakPointL) {
-    font-size: @fontSizeS !important;
+    font-size: @DesktopFontSizeS !important;
   }
 
   @media (max-width: 370px) {
