--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -104,7 +104,7 @@
       //padding-bottom: 12rem;
 
       h1 {
-        font-size: @fontSizeL;
+        font-size: @DesktopFontSizeL;
         margin-bottom: 2rem;
       }
     }
@@ -230,10 +230,10 @@
   word-wrap: break-word;
   max-width: 100%;
   .contentGridSlim();
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
   }
 
   > :last-child {
@@ -258,10 +258,10 @@
 }
 
 .innerTextHuge {
-  font-size: @fontSizeL;
+  font-size: @DesktopFontSizeL;
 
   @media (max-width: @breakPointM) {
-    font-size: @fontSizeM;
+    font-size: @DesktopFontSizeM;
   }
 }
 
@@ -271,13 +271,13 @@
 }
 
 .title {
-  font-size: @fontSizeXXL;
+  font-size: @DesktopFontSizeXL;
   margin-top: 0;
   margin-bottom: 1rem;
   .contentGridSlim();
 
   @media (max-width: @breakPointM) {
-    font-size: @fontSizeXL;
+    font-size: @DesktopFontSizeXL;
     margin-bottom: 0;
   }
 }
@@ -307,7 +307,7 @@
 
 .emailSignup {
   @media (min-width: @breakPointM) {
-    font-size: @fontSizeL;
+    font-size: @DesktopFontSizeL;
   }
 }
 
@@ -318,14 +318,14 @@
   z-index: 1;
   grid-row-gap: 2rem;
   margin: 4rem 0;
-  font-size: @fontSizeXXXL;
+  font-size: @DesktopFontSizeXL;
 
   @media (max-width: @breakPointM) {
-    font-size: @fontSizeL;
+    font-size: @DesktopFontSizeL;
   }
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeL;
+    font-size: @DesktopFontSizeL;
     grid-row-gap: 1rem;
     margin: 5rem 0 7rem;
   }
@@ -359,7 +359,7 @@
 .sloganLineSignup {
   grid-column: 5 / -3;
   pointer-events: all;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 
   @media (max-width: @breakPointM) {
     grid-column-start: 4;
@@ -425,22 +425,22 @@
 }
 
 .headerTitle {
-  font-size: @fontSizeXXL;
+  font-size: @DesktopFontSizeXL;
   margin: 1rem 0 0;
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeL;
+    font-size: @DesktopFontSizeL;
   }
 }
 
 .headerPreTitle {
   margin: 0 0 1rem;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 }
 
 .headerSubTitle {
   margin: 1rem 0 0;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 }
 
 .columnIntroText {
@@ -456,7 +456,7 @@
 .column {
   width: 44%;
   font-weight: normal;
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   margin-bottom: 2rem;
 
   @media (max-width: @breakPointM) {
@@ -473,7 +473,7 @@
 
 .donationIntroText {
   margin-bottom: 2rem;
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   font-weight: normal;
 }
 
