--- a/src/components/Municipality/MunicipalityMap/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/style.module.less
@@ -61,7 +61,7 @@
   border-radius: 10%;
 
   text-decoration: none;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
   line-height: 1;
   font-weight: bold;
   color: var(--bg-color);
@@ -170,7 +170,7 @@
 }
 
 .legendLabel {
-  font-size: @fontSizeXS;
+  font-size: @DesktopFontSizeXS;
 }
 
 .legendContent {
@@ -182,9 +182,9 @@
 
 .legendHeadline {
   margin-bottom: 2rem;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
   @media (max-width: @breakPointM) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
   }
 }
 
@@ -193,7 +193,7 @@
   width: 100%;
   margin-bottom: 2.5rem;
   & span {
-    font-size: @fontSizeXS;
+    font-size: @DesktopFontSizeXS;
   }
   & div {
     display: inline-block;
@@ -212,7 +212,7 @@
 }
 
 .legendIconLabel {
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   margin-bottom: 0.75rem;
 }
 
