--- a/src/components/Profile/ProfileOverview/style.module.less
+++ b/src/components/Profile/ProfileOverview/style.module.less
@@ -56,7 +56,7 @@ h2 {
 .signaturesSection {
   .link {
     margin-top: 2rem;
-    font-size: @fontSizeM;
+    font-size: @DesktopFontSizeM;
   }
 
   .signatureStats {
