--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -45,19 +45,19 @@
 }
 
 .username {
-  font-size: @fontSizeXXL;
+  font-size: @DesktopFontSizeXL;
   margin: 0;
   padding: 0;
 
   @media (max-width: @breakPointM) {
-    font-size: @fontSizeXL;
+    font-size: @DesktopFontSizeXL;
   }
 }
 
 // Details section
 .placeInfo {
   margin-bottom: 0.3rem;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 }
 
 .details {
@@ -65,7 +65,7 @@
 
   @media (max-width: @breakPointS) {
     margin-top: 1em;
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
   }
 }
 
