--- a/src/components/QuestionUbi/ListQuestions/style.module.less
+++ b/src/components/QuestionUbi/ListQuestions/style.module.less
@@ -4,7 +4,7 @@
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
 
   @media (max-width: @breakPointS) {
     display: flex;
@@ -47,7 +47,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  font-size: @fontSizeXS;
+  font-size: @DesktopFontSizeXS;
 }
 
 .justSent {
