--- a/src/components/SignatureStats/style.module.less
+++ b/src/components/SignatureStats/style.module.less
@@ -16,18 +16,18 @@
 }
 
 .statisticsCount {
-  font-size: @fontSizeXXXL;
+  font-size: @DesktopFontSizeXL;
 
   @media (max-width: @breakPointM) {
-    font-size: @fontSizeXXL;
+    font-size: @DesktopFontSizeXL;
   }
 }
 
 .statisticsLabel {
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
   line-height: 1.3;
 
   @media (max-width: @breakPointM) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
   }
 }
