--- a/src/components/Tooltip/style.module.less
+++ b/src/components/Tooltip/style.module.less
@@ -45,7 +45,7 @@
 .tooltipContent {
   z-index: 1;
   position: relative;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
   text-shadow: none;
   color: var(--bg-color);
   max-width: 20rem;
