--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -9,13 +9,17 @@
 @greyMedium: #dedede;
 @white: white;
 
-@fontSizeXXXL: 4rem;
-@fontSizeXXL: 3rem;
-@fontSizeXL: 2.5rem;
-@fontSizeL: 2rem;
-@fontSizeM: 1.5rem;
-@fontSizeS: 1.15rem;
-@fontSizeXS: 1rem;
+@DesktopFontSizeXL: 6.25rem;
+@DesktopFontSizeL: 3.375rem;
+@DesktopFontSizeM: 1.75rem;
+@DesktopFontSizeS: 1.25rem;
+@DesktopFontSizeXS: 1rem;
+
+@MobileFontSizeXL: 2.875rem;
+@MobileFontSizeL: 1.75rem;
+@MobileFontSizeM: 1.25rem;
+@MobileFontSizeS: 1rem;
+@MobileFontSizeXS: 0.75rem;
 
 @borderWidth: 1px;
 @borderWidthThick: 3px;
