--- a/src/pages/verifizierung/style.module.less
+++ b/src/pages/verifizierung/style.module.less
@@ -5,9 +5,9 @@
 }
 
 .finallyMessageError {
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 
   @media (max-width: @breakPointS) {
-    font-size: @fontSizeS;
+    font-size: @DesktopFontSizeS;
   }
 }
