--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -6,15 +6,15 @@
   border: var(--font-color) solid @borderWidth;
   border-radius: @borderRadius;
   text-decoration: none;
-  font-size: @fontSizeL;
+  font-size: @DesktopFontSizeL;
   font-weight: bold;
 
   &.medium {
-    font-size: @fontSizeM;
+    font-size: @DesktopFontSizeM;
   }
 
   &.small {
-    font-size: @fontSizeXS;
+    font-size: @DesktopFontSizeXS;
     border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 1px;
@@ -77,7 +77,7 @@ p a.linkButton {
   align-items: center;
 
   .inlineButton {
-    font-size: @fontSizeM;
+    font-size: @DesktopFontSizeM;
     font-weight: bold;
   }
 
