--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -17,7 +17,7 @@
 
 .textInput {
   margin-left: 1rem;
-  font-size: @fontSizeL;
+  font-size: @DesktopFontSizeL;
   width: 6.1rem;
 
   @media (max-width: @breakPointM) {
