--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -5,7 +5,7 @@
   color: @greyBright;
   min-height: 15rem;
   padding: 2rem 1rem;
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
   --secondary-color: @blueBright;
 }
 
