--- a/src/components/Layout/Header/StickyDonationBar/style.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/style.module.less
@@ -30,7 +30,7 @@
   margin: auto 1rem;
   margin-top: auto;
   margin-bottom: auto;
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   padding-top: 0.25rem;
   color: @white;
 
@@ -40,7 +40,7 @@
 }
 
 .donationBarCTA {
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   font-weight: 600;
   color: @white;
   border: 3px solid @white;
