--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -12,13 +12,13 @@
 }
 
 .newsletterCardHeading {
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
   margin-bottom: 0;
 }
 
 .newsletterCardDescription {
   font-weight: 100;
-  font-size: @fontSizeS;
+  font-size: @DesktopFontSizeS;
   margin: 0.25em 0em 0.5em 0em;
 }
 
