--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -65,7 +65,7 @@
 }
 
 .actionText {
-  font-size: @fontSizeL;
+  font-size: @DesktopFontSizeL;
   @media (max-width: @breakPointS) {
     font-size: 1.5rem;
     line-height: 1.5;
