--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -30,7 +30,7 @@ h1 {
 h1,
 h2,
 h3 {
-  font-size: @fontSizeL;
+  font-size: @DesktopFontSizeL;
 
   @media (max-width: @breakPointM) {
     hyphens: auto;
@@ -38,7 +38,7 @@ h3 {
 }
 
 h4 {
-  font-size: @fontSizeM;
+  font-size: @DesktopFontSizeM;
 
   @media (max-width: @breakPointM) {
     hyphens: auto;
