--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -9,17 +9,19 @@
 @greyMedium: #dedede;
 @white: white;
 
-@DesktopFontSizeXL: 6.25rem;
-@DesktopFontSizeL: 3.375rem;
-@DesktopFontSizeM: 1.75rem;
-@DesktopFontSizeS: 1.25rem;
-@DesktopFontSizeXS: 1rem;
+@DesktopFontSizeXXL: 6.25rem; // Use wisely
+@DesktopFontSizeXL: 3.375rem; // For big headlines
+@DesktopFontSizeL: 1.75rem; // For smaller headlines and teaser texts
+@DesktopFontSizeM: 1.25rem; // Normal body text size
+@DesktopFontSizeS: 1rem; // For hints / image captions
+@DesktopFontSizeXS: 0.75rem; // For very small hints
 
-@MobileFontSizeXL: 2.875rem;
-@MobileFontSizeL: 1.75rem;
-@MobileFontSizeM: 1.25rem;
-@MobileFontSizeS: 1rem;
-@MobileFontSizeXS: 0.75rem;
+@MobileFontSizeXXL: 2.875rem; // Use wisely
+@MobileFontSizeXL: 1.75rem; // For big headlines
+@MobileFontSizeL: 1.25rem; // For smaller headlines and teaser texts
+@MobileFontSizeM: 1rem; // Normal body text size
+@MobileFontSizeS: 0.75rem; // For small hints / captions
+@MobileFontSizeXS: 0.625rem; // For very small hints - use wisely
 
 @borderWidth: 1px;
 @borderWidthThick: 3px;
