--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -230,11 +230,6 @@
   word-wrap: break-word;
   max-width: 100%;
   .contentGridSlim();
-  font-size: @DesktopFontSizeM;
-
-  @media (max-width: @breakPointS) {
-    font-size: @DesktopFontSizeS;
-  }
 
   > :last-child {
     margin-bottom: 0;
@@ -277,7 +272,7 @@
   .contentGridSlim();
 
   @media (max-width: @breakPointM) {
-    font-size: @DesktopFontSizeXL;
+    font-size: @MobileFontSizeXL;
     margin-bottom: 0;
   }
 }
