--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -9,14 +9,14 @@
 @greyMedium: #dedede;
 @white: white;
 
-@DesktopFontSizeXXL: 6.25rem; // Use wisely
+@DesktopFontSizeXXL: 6.25rem; // HUGE, Use only in special cases
 @DesktopFontSizeXL: 3.375rem; // For big headlines
 @DesktopFontSizeL: 1.75rem; // For smaller headlines and teaser texts
 @DesktopFontSizeM: 1.25rem; // Normal body text size
 @DesktopFontSizeS: 1rem; // For hints / image captions
 @DesktopFontSizeXS: 0.75rem; // For very small hints
 
-@MobileFontSizeXXL: 2.875rem; // Use wisely
+@MobileFontSizeXXL: 4.5rem; // Use wisely
 @MobileFontSizeXL: 1.75rem; // For big headlines
 @MobileFontSizeL: 1.25rem; // For smaller headlines and teaser texts
 @MobileFontSizeM: 1rem; // Normal body text size
