--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -20,16 +20,16 @@
   font-size: 90px;
   font-weight: 600;
   color: @blueBright;
-  border-bottom: 2px solid @red;
+  border-bottom: 2px solid @white;
   line-height: 0.95em; /* adjusted for Lato font */
 }
 
 @media (max-width: 500px) {
   .react-reel__reel {
-    font-size: 40px;
+    font-size: @MobileFontSizeXXL;
     font-weight: 600;
-    color: @blueBright;
-    border-bottom: 2px solid @red;
-    line-height: 0.95em; /* adjusted for Lato font */
+    color: @white;
+    border-bottom: 0px solid @white;
+    line-height: 0.9em; /* adjusted for Lato font */
   }
 }
