Changed ticker desktop styles

--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -17,10 +17,10 @@
   overflow-y: hidden;
 
   /** CUSTOMISE BELOW */
-  font-size: 90px;
+  font-size: @DesktopFontSizeXXL;
   font-weight: 600;
-  color: @blueBright;
-  border-bottom: 2px solid @white;
+  color: @white;
+  border-bottom: 0px solid @white;
   line-height: 0.95em; /* adjusted for Lato font */
 }
 
