--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -11,17 +11,14 @@
 }
 
 .counterContainer {
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   display: flex;
-
-  @media (max-width: @breakPointS) {
-    margin-bottom: 1rem;
-  }
 }
 
 .slotMachine {
   font-family: sans-serif;
   font-size: 4rem;
+  margin-bottom: 4.5rem;
 
   @media (max-width: @breakPointM) {
     font-size: 1.5rem;
@@ -59,6 +56,7 @@
 .actionTextBig {
   font-size: 2.25rem;
   letter-spacing: 0.04px;
+  line-height: 1.2em;
 
   @media (max-width: @breakPointS) {
     font-size: @MobileFontSizeXL;
