--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -30,6 +30,7 @@ h1 {
 h1,
 h2 {
   font-size: @DesktopFontSizeXL;
+  letter-spacing: 0.15px;
 
   @media (max-width: @breakPointM) {
     font-size: @MobileFontSizeXL;
