Changed search bar styling

--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -2,7 +2,7 @@
 @blueBright: #46b4b4;
 @blueDark: #3423f6;
 @rose: #e5b5c8;
-@violet: #7d69f6;
+@violet: #785fff;
 @yellow: #fef377;
 @grey: #f0f0f0;
 @greyBright: #f5f5f5;
