--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -29,6 +29,16 @@
   margin: 0;
 }
 
+.searchBar {
+  border-radius: 25px;
+  border-color: @blueBright;
+
+  &:focus {
+    outline: none;
+    box-shadow: inset 0 0 0 @borderWidthThick @blueBright;
+  }
+}
+
 .suggestions {
   background-color: @white;
   font-weight: normal;
