--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -5,8 +5,8 @@
 .textInputInline,
 .textarea {
   background: @white;
-  border: 2px solid @red;
-  color: @red;
+  border: 2px solid @violet;
+  color: @violet;
   font-family: inherit;
   border-radius: 0;
   padding: @buttonPadding;
@@ -25,7 +25,7 @@
 
   &:focus {
     outline: none;
-    box-shadow: inset 0 0 0 @borderWidthThick @red;
+    box-shadow: inset 0 0 0 @borderWidthThick @violet;
   }
 }
 
