Renamed "blueBright" to "aqua"

--- a/src/components/Layout/Header/StickyDonationBar/style.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/style.module.less
@@ -2,7 +2,7 @@
 
 .donationBar {
   height: @donationBarHeight;
-  background: @blueBright;
+  background: @aqua;
 
   @media (max-width: @breakPointS) {
     height: @donationBarHeightS;
