--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -24,7 +24,7 @@
     color: @violet;
     --bg-color: @white;
     --font-color: @violet;
-    --secondary-color: @blueBright;
+    --secondary-color: @aqua;
     --text-on-secondary-color: @red;
   }
 
@@ -38,7 +38,7 @@
   }
 
   &.sectionGreen {
-    background-color: @blueBright;
+    background-color: @aqua;
     color: @greyBright;
     --bg-color: @greyBright;
     --font-color: @greyBright;
@@ -328,7 +328,7 @@
 
 .sloganLine1 {
   grid-column: 3 / -1;
-  color: @blueBright;
+  color: @aqua;
 
   @media (max-width: @breakPointM) {
     grid-column-start: 2;
