--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -3,7 +3,7 @@
 .container {
   --bg-color: @white;
   --font-color: @red;
-  --secondary-color: @blueBright;
+  --secondary-color: @aqua;
   --text-on-secondary-color: @white;
   position: fixed;
   top: 0;
