--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -13,7 +13,7 @@ body {
   color: @white;
   --bg-color: @grey;
   --font-color: @red;
-  --font-color-secondary: @blueBright;
+  --font-color-secondary: @aqua;
   --secondary-color: @white;
   --text-on-secondary-color: @red;
   --grid-gap: 1rem;
