--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -31,11 +31,11 @@
 
 .searchBar {
   border-radius: 25px;
-  border-color: @blueBright;
+  border-color: @aqua;
 
   &:focus {
     outline: none;
-    box-shadow: inset 0 0 0 @borderWidthThick @blueBright;
+    box-shadow: inset 0 0 0 @borderWidthThick @aqua;
   }
 }
 
