--- a/src/components/Layout/Footer/style.module.less
+++ b/src/components/Layout/Footer/style.module.less
@@ -6,7 +6,7 @@
   min-height: 15rem;
   padding: 2rem 1rem;
   font-size: @DesktopFontSizeM;
-  --secondary-color: @blueBright;
+  --secondary-color: @aqua;
 }
 
 .itemContainer {
