More styling changes - Fixed colors across site - Fixed heading typography - Some small changes to profile page (colors and margins) - Fixed some typos

--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -68,7 +68,7 @@
 
 .headingSelfScan {
   margin: 0 0 1rem;
-  font-size: @DesktopFontSizeM;
+  font-size: @DesktopFontSizeL;
 }
 
 .campaignVisualisations {
@@ -80,8 +80,6 @@
 }
 
 .campaignVisualisations {
-  background-color: @white;
-  color: @red;
   padding: 1.5rem;
 }
 
@@ -90,7 +88,7 @@
 }
 
 .fieldLabel {
-  min-height: 3rem;
+  //min-height: 3rem;
 
   @media (max-width: @breakPointM) {
     font-size: 18px;
