--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -101,7 +101,7 @@
 
 .ctaButton {
   align-self: center;
-  --font-color: @red;
+  --font-color: @black;
   animation-name: wiggle;
   animation-duration: 8s;
   animation-iteration-count: infinite;
