--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -21,36 +21,42 @@
 
   &.sectionWhite {
     background-color: @white;
-    color: @violet;
+    color: @black;
     --bg-color: @white;
-    --font-color: @violet;
+    --font-color: @black;
     --secondary-color: @aqua;
-    --text-on-secondary-color: @red;
+    --text-on-secondary-color: @white;
+
+    h1,
+    h2,
+    h3 {
+      color: @violet;
+    }
   }
 
   &.sectionViolet {
     background-color: @violet;
-    color: @greyBright;
+    color: @white;
     --bg-color: @violet;
-    --font-color: @greyBright;
-    --secondary-color: @red;
-    --text-on-secondary-color: @grey;
+    --font-color: @white;
+    --secondary-color: @aqua;
+    --text-on-secondary-color: @white;
   }
 
   &.sectionGreen {
     background-color: @aqua;
-    color: @greyBright;
-    --bg-color: @greyBright;
-    --font-color: @greyBright;
-    --secondary-color: @red;
+    color: @white;
+    --bg-color: @white;
+    --font-color: @white;
+    --secondary-color: @violet;
     --text-on-secondary-color: @white;
   }
 
   &.sectionRed {
     background-color: @red;
-    color: @greyBright;
+    color: @white;
     --bg-color: @red;
-    --font-color: @greyBright;
+    --font-color: @white;
     --secondary-color: @violet;
     --text-on-secondary-color: @white;
   }
