--- a/src/components/Municipality/MunicipalityIntro/style.module.less
+++ b/src/components/Municipality/MunicipalityIntro/style.module.less
@@ -2,11 +2,11 @@
 
 .mapSection {
   --bg-color: @violet;
-  --font-color: @greyBright;
-  --secondary-color: @red;
-  --text-on-secondary-color: @greyBright;
+  --font-color: @white;
+  --secondary-color: @aqua;
+  --text-on-secondary-color: @white;
   background-color: @violet;
-  color: @greyBright;
+  color: @white;
   padding: 0rem var(--grid-gap) 10rem;
 }
 
