--- a/src/components/Municipality/MunicipalityMap/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/style.module.less
@@ -144,9 +144,10 @@
   width: 100%;
   z-index: 2;
   pointer-events: all;
-  background-color: @violet;
+  background-color: @white;
+  color: @black;
   overflow-y: scroll;
-  border: 1px solid @greyBright;
+  border: 1px solid @white;
 }
 
 .closeButton {
