--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -2,7 +2,7 @@
 
 .container {
   --bg-color: @white;
-  --font-color: @red;
+  --font-color: @black;
   --secondary-color: @aqua;
   --text-on-secondary-color: @white;
   position: fixed;
