--- a/src/components/Profile/ProfileDonationSettings/style.module.less
+++ b/src/components/Profile/ProfileDonationSettings/style.module.less
@@ -10,7 +10,15 @@
 }
 
 .donationStatusMessage {
-  margin-top: 3rem;
+  margin: 4rem 0;
+
+  h3 {
+    margin: 0;
+  }
+}
+
+.donationAmountRecurring {
+  font-weight: bold;
 }
 
 .icon {
