--- a/src/components/Profile/ProfileNotifications/style.module.less
+++ b/src/components/Profile/ProfileNotifications/style.module.less
@@ -1,11 +1,8 @@
 @import '../../../components/style/vars.less';
-.sectionHeadline {
-  font-weight: 100;
-}
 
 .newsletterCard {
   background-color: white;
-  color: @red;
+  color: @black;
   padding: 0.5em 1.5em 0.5em 1.5em;
   border-radius: 15px;
   margin-top: 1em;
@@ -41,5 +38,5 @@
 }
 
 .searchPlaces {
-  color: @red;
+  color: @black;
 }
