--- a/src/components/Profile/ProfileSignatures/style.module.less
+++ b/src/components/Profile/ProfileSignatures/style.module.less
@@ -2,15 +2,10 @@
 
 .signatureSection {
   background-color: none;
-  --bg-color: none;
+  --bg-color: @aqua;
   padding: 0;
 }
 
-.customStyle {
-  --bg-color: @red;
-  background-color: @red;
-  color: @grey;
-  & input:checked {
-    color: @red;
-  }
+.signatureWrapper {
+  padding: 0 !important;
 }
