--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -8,14 +8,14 @@
 body {
   font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
   font-weight: 500;
-  background: @grey;
+  background: @white;
   margin: 0;
-  color: @white;
+  color: @black;
   --bg-color: @grey;
-  --font-color: @red;
-  --font-color-secondary: @aqua;
-  --secondary-color: @white;
-  --text-on-secondary-color: @red;
+  --font-color: @black;
+  --font-color-secondary: @violet;
+  --secondary-color: @violet;
+  --text-on-secondary-color: @white;
   --grid-gap: 1rem;
 
   @media (min-width: @breakPointL) {
