--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -18,7 +18,7 @@
 }
 
 .title {
-  font-size: @DesktopFontSizeM;
+  margin-bottom: 0.5rem;
 }
 
 .cta {
@@ -84,7 +84,7 @@
   height: 100%;
   width: 100%;
   z-index: 0;
-  transform: skewX(3.2deg) skewY(0.3deg) rotate(-0.2deg);
+  //transform: skewX(3.2deg) skewY(0.3deg) rotate(-0.2deg);
 
   .hasNotStarted & {
     border: 1px solid var(--font-color);
@@ -94,7 +94,8 @@
 .barGoalInbetween {
   position: absolute;
   height: 100%;
-  background: var(--font-color);
+  background: var(--bg-color);
+  border: 1px solid @white;
 }
 
 .starts {
@@ -114,7 +115,7 @@
   bottom: 0;
   height: 5rem;
   font-size: @DesktopFontSizeXL;
-  color: var(--text-on-secondary-color);
+  color: var(--bg-color);
   display: flex;
   transition: width 1s ease;
   z-index: 3;
@@ -134,7 +135,7 @@
     height: 100%;
     width: 100%;
     z-index: 0;
-    transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
+    // transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
   }
 
   .barCurrentLabel {
@@ -159,7 +160,8 @@
     color: var(--bg-color);
 
     &::before {
-      background: @aqua;
+      background: @white;
+      color: @aqua;
     }
   }
 }
