--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -86,7 +86,7 @@
 
 .editSettings {
   grid-column: 1 / span 2;
-  background-color: @red;
+  background-color: @aqua;
   color: @white;
 
   @media (max-width: @breakPointS) {
