--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -2,12 +2,13 @@
 @aqua: #46b4b4;
 @blueDark: #3423f6;
 @rose: #e5b5c8;
-@violet: #785fff;
+@violet: #7d69f6;
 @yellow: #fef377;
 @grey: #f0f0f0;
 @greyBright: #f5f5f5;
 @greyMedium: #dedede;
 @white: white;
+@black: black;
 
 @DesktopFontSizeXXL: 6.25rem; // HUGE, Use only in special cases
 @DesktopFontSizeXL: 3.375rem; // For big headlines
