Changed 'green' to 'aqua', changed secondary colors for sections

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -43,10 +43,10 @@
     --text-on-secondary-color: @white;
   }
 
-  &.sectionGreen {
+  &.sectionAqua {
     background-color: @aqua;
     color: @white;
-    --bg-color: @white;
+    --bg-color: @aqua;
     --font-color: @white;
     --secondary-color: @violet;
     --text-on-secondary-color: @white;
@@ -57,8 +57,8 @@
     color: @white;
     --bg-color: @red;
     --font-color: @white;
-    --secondary-color: @violet;
-    --text-on-secondary-color: @white;
+    --secondary-color: @white;
+    --text-on-secondary-color: @black;
   }
 
   &:nth-child(3n + 1):not(:only-child),
