added video section

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -294,6 +294,7 @@
 .youtubeContainer {
   position: relative;
   padding-bottom: 56.25%;
+  margin-bottom: 2rem;
   .contentGridSlim();
   pointer-events: all;
 
