basic logic for progress, invite, become active components

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -33,7 +33,7 @@
 
 .barGoal {
   position: absolute;
-  background: var(--font-color);
+  border: var(--font-color);
   color: var(--bg-color);
   height: 5rem;
   width: 100%;
@@ -94,7 +94,6 @@
 .barGoalInbetween {
   position: absolute;
   height: 100%;
-  background: var(--bg-color);
   border: 1px solid @white;
 }
 
