--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -465,7 +465,7 @@
     width: 100%;
   }
 }
-.columnIconWrapper {
+.columnIcon {
   text-align: center;
 }
 
@@ -477,11 +477,6 @@
   margin-bottom: 2rem;
   font-size: @DesktopFontSizeS;
   font-weight: normal;
-}
-
-.sectionVideo {
-  background-color: @red !important;
-  color: @greyBright !important;
 }
 
 .keyVisual {
