--- a/src/components/TickerToSignup/Ticker/reelstyle.less
+++ b/src/components/TickerToSignup/Ticker/reelstyle.less
@@ -19,7 +19,7 @@
   /** CUSTOMISE BELOW */
   font-size: @DesktopFontSizeXXL;
   font-weight: 600;
-  color: @white;
+  // color: @white;
   border-bottom: 0px solid @white;
   line-height: 0.95em; /* adjusted for Lato font */
 }
