--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -1,8 +1,8 @@
 @import '../../../components/style/vars.less';
 
 .contentContainer {
-  background-color: @violet;
-  color: @white;
+  // background-color: @violet;
+  // color: @white;
   margin: auto;
 }
 
