--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -9,7 +9,7 @@
   color: @violet;
   font-family: inherit;
   border-radius: 0;
-  padding: @buttonPadding;
+  padding: @inputPadding;
   line-height: inherit;
   max-width: 100%;
   width: @inputWidth;
