--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -10,6 +10,9 @@
 @white: white;
 @black: black;
 
+@violetTransparent: rgba(120, 95, 255, 0.2);
+@whiteTransparent: rgba(255, 255, 255, 0.2);
+
 @DesktopFontSizeXXL: 6.25rem; // HUGE, Use only in special cases
 @DesktopFontSizeXL: 3.375rem; // For big headlines
 @DesktopFontSizeL: 1.75rem; // For smaller headlines and teaser texts
@@ -26,9 +29,10 @@
 
 @borderWidth: 1px;
 @borderWidthThick: 3px;
-@borderRadius: 1.3rem;
+@borderRadius: 2rem;
 @borderRadiusSmall: 0.9rem;
-@buttonPadding: 0.8rem 0.8rem 0.5rem;
+@buttonPadding: 0.87rem 4.9rem 0.55rem;
+@inputPadding: 0.8rem 0.8rem 0.5rem;
 
 @headerHeight: 5rem;
 @headerHeightS: 4rem;
