--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -5,6 +5,8 @@
   color: var(--text-on-secondary-color);
   --font-color: var(--text-on-secondary-color);
   --bg-color: var(--secondary-color);
+  --button-font-color: var(--text-on-secondary-color);
+  --button-bg-color: var(--secondary-color);
   padding: 1em;
   position: relative;
   z-index: 1;
