add contentful fullWithOnDesktop option

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -524,10 +524,6 @@
   }
 }
 
-.componentWrapper {
-  background-color: @violet;
-}
-
 .componentElementContainer {
   max-width: @headerWidth;
   margin: auto;
@@ -537,7 +533,13 @@
   margin-top: 2rem;
 }
 
-.componentElement {
+.componentElementFullWidth {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  width: 100%;
+}
+
+.componentElementOneColumn {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   width: 47.5%;
